# Settlers-IV-Patches

./: .gitignore  README.md
data/: WidescreenFix.ini
source/: CMakeLists.txt  Config.cpp  Config.h  Makefile  Patch.cpp  Patch.h  ddraw.def  dllmain.cpp  pch.h
